--- a/public/404.html
+++ b/public/404.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><script src="/prtfoio/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=prtfoio/livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><script src="/prtfoio/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=prtfoio/livereload" data-no-instant defer></script>
+<meta property="og:type" content="website">
+<meta property="og:title" content="404 Page not found">
+<meta property="og:description" content="Agrim Paneru&#39;s portfolio and blog about machine learning, AI, and software engineering.">
+<meta property="og:url" content="http://localhost:1313/prtfoio/404.html">
+<meta property="og:image" content="">
+
+<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
 <title>404 Page not found | Agrim Paneru</title>
 <meta name="keywords" content="">
-<meta name="description" content="">
+<meta name="description" content="Agrim Paneru&#39;s portfolio and blog about machine learning, AI, and software engineering.">
 <meta name="author" content="">
 <link rel="canonical" href="http://localhost:1313/prtfoio/404.html">
 <link crossorigin="anonymous" href="/prtfoio/assets/css/stylesheet.96c7d6443f7296882c1368d79c4a3a4eb0beea7637a5bb0631f2d1dcdee56598.css" integrity="sha256-lsfWRD9ylogsE2jXnEo6TrC&#43;6nY3pbsGMfLR3N7lZZg=" rel="preload stylesheet" as="style">
@@ -58,11 +65,12 @@
 </noscript><meta property="og:url" content="http://localhost:1313/prtfoio/404.html">
   <meta property="og:site_name" content="Agrim Paneru">
   <meta property="og:title" content="404 Page not found">
+  <meta property="og:description" content="Agrim Paneru&#39;s portfolio and blog about machine learning, AI, and software engineering.">
   <meta property="og:locale" content="en-us">
   <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="404 Page not found">
-<meta name="twitter:description" content="">
+<meta name="twitter:description" content="Agrim Paneru&#39;s portfolio and blog about machine learning, AI, and software engineering.">
 
 </head>
 
