--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
 <main class="main"><div class="profile">
     <div class="profile_inner">
         <h1>Agrim Paneru</h1>
-        <span>Hi, I’m Agrim, a final-year Computer Engineering student at Pulchowk Campus, IOE. I have a strong passion for machine learning and enjoy exploring its diverse applications</span><div class="social-icons" >
+        <span>Hi, I’m Agrim, a final-year Computer Engineering student at Pulchowk Campus, IOE. I have a strong passion for machine learning and enjoy exploring its diverse applications.</span><div class="social-icons" >
     <a href="https://mail.google.com/mail/?view=cm&amp;to=agrimpaneru00@gmail.com" target="_blank" rel="noopener noreferrer me"
         title="Email">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2"
